При создании привычки возвращать ее id https://github.com/AlibabaRazboinik/habit_tracker/issues/59
