# src/main/resources/api.yaml
@@ -58,6 +58,10 @@ paths:
       responses:
         200:
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IdDTO'
         500:
           description: ERROR
 
